[package]
name = "path-tree"
version = "0.7.5"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
description = "path-tree is a lightweight high performance HTTP request router for Rust"
homepage = "https://github.com/viz-rs/path-tree"
documentation = "https://docs.rs/path-tree"
keywords = ["radix", "tree", "path", "router"]
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

include = [
  "CHANGES.md",
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "README.md",
  "src/*.rs"
]

[dependencies]
smallvec = "1.13.2"

[dev-dependencies]
bytes = "1"
actix-router = "0.5"
ntex-router = "0.5"
path-table = "1.0"
route-recognizer = "0.3"
matchit = "0.7"
gonzales = "0.0.3-beta"
futures = "0.3"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "net"] }

[[bench]]
name = "bench"
harness = false
path = "benches/bench.rs"

[[example]]
name = "hello"
path = "examples/hello.rs"

[profile.bench]
lto = true
